--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -2,18 +2,19 @@ name: Tests
 on: push
 
 jobs:
-  check-style:     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+    check-test:     
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
 
-      - name: Setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.11.3
+            - name: Setup python
+                uses: actions/setup-python@v2
+                with:
+                python-version: 3.11.3
 
-      - name: Install tools
-        run: python3 -m pip install 
-             --upgrade pip pytest
+            - name: Install tools
+                run: python3 -m pip install 
+                    --upgrade pip pytest
 
-      - name: Test with unittest
-        run: python3 -m unittest test_interns.py
+            - name: Test with unittest
+                run: python3 -m unittest test_interns.py
